--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.11",
@@ -35,6 +36,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
